<resources>
    <string name="app_name">Travel Note</string>
    <string name="title_activity_main_">Main_Activity</string>
    <string name="action_settings">Preferencias</string>
    <string name="categor_label">Nueva Categoria:</string>
    <string name="description_input">Categoria</string>
    <string name="action_edit">Editar</string>
    <string name="action_delete">Suprimir</string>
    <string name="descripcio_label">Descripcion</string>
    <string name="nom_label">Nombre</string>
    <string name="ciudad_label">ciudad</string>
    <string name="action_discard">Descartar</string>
    <string name="estado_label">estadito</string>
    <string name="tecnico_label">Gastado €</string>
    <string name="prioridad_label">Total Km</string>
    <string name="title_activity_detail">Detalle</string>
    <string name="title_activity_insert">nuevo</string>
    <string name="title_activity_update">actualiza</string>
    <string name="title_insert_evento">Nueva nota</string>
    <string name="viaje_label">Estás en el viaje a: </string>
    <string name="nuevo_viaje">Nuevo viaje</string>
    <string name="nom_viaje">Nombre viaje: </string>
    <string name="lati">Latitud: </string>
    <string name="longi">Longitud: </string>
    <string name="alti">Altitud: </string>
    <string name="categor">categoria</string>
    <string name="nomeven">nombre: </string>
    <string name="direccio">Dirección: </string>
    <string name="codP">CP: </string>
    <string name="data_in">fecha inicio: </string>
    <string name="data_i">fecha inicio </string>
    <string name="data_fi">fecha final: </string>
    <string name="data_f">fecha final </string>
    <string name="tipo_v">tipo viaje: </string>
    <string name="kmini">Km inicio: </string>
    <string name="kmfi">Km final: </string>
    <string name="guardar">Guardar </string>
    <string name="precio">precio </string>
    <string name="eur_">EUR: </string>
    <string name="eurgas"> Euros gast</string>
    <string name="telef">teléfono: </string>
    <string name="mail">mail: </string>
    <string name="web">web: </string>
    <string name="llevas">Llevas: </string>
    <string name="km_"> Km </string>
    <string name="gps">GPS</string>
    <string name="fecha">fecha</string>
    <string name="spin_nv">Nombre de viaje</string>
    <string name="spin_catg">Categoria</string>
    <string name="spin_tv">Tipo de viaje</string>
    <string name="spin_mp">Modo de pago</string>
    <string name="spin_mon">Moneda</string>
    <string name="km_actual">Km actual</string>
    <string name="f_vi_toast_text">Etoy con el spinner tv </string>
    <string name="coment">Comentarios</string>
    <string name="menu_categor">Categorias</string>
    <string name="menu_modopag">Modos de pago</string>
    <string name="menu_moneda">Monedas</string>
    <string name="menu_tipov">Tipos de viaje</string>
    <string name="menu_viajes">Viajes</string>
    <string name="menu_eventos">Notas</string>
    <string name="menu_basicos">Datos básicos ></string>
    <string name="menu_exportar">Exportar</string>
    <string name="menu_exportdb">Exportar database</string>
    <string name="menu_exportcsv">Exportar csv</string>
    <string name="menu_importar">Importar</string>
    <string name="menu_importdb">Importar database</string>
    <string name="menu_importcsv">Importar csv</string>
    <string name="help_export_csv">Exportar la tabla al formato csv crear\á una copia en la SD en formato CSV (valores separados per comas). La podr\ás abrir y editar con una hoja de c\álculo.</string>
    <string name="help_export_csv_title">Exportar la tabla al formato csv</string>
    <string name="menu_export">Exportar ></string>
    <string name="menu_import">Importar ></string>
    <string name="sin_datos">No hay datos</string>
    <string name="insert_nuevo">Nuevo</string>
    <string name="nombre">Nombre:</string>
    <string name="valor_eur">Valor en EUR:</string>
    <string name="afegir_mc">Nuevo</string>
    <string name="editar_mc">Editar</string>
    <string name="borrar_mc">Suprimir</string>
    <string name="error">Error !!</string>
    <string name="export_acabat_msg">El fichero exportado est\á en la SD en el fichero\:</string>
    <string name="export_be">Exportaci\ón con \éxito\! </string>
    <string name="help_export_db">Exportar la base de datos crear\á una copia en la carpeta Bkviajes de la SD, en formato Sqlite. La podr\ás compartir, abrir y editar con un gestor de bases de datos</string>
    <string name="help_export_db_title">Exportar la base de datos</string>
    <string name="exporting_title">Exportando la base de datos</string>
    <string name="exporting">Exportando...</string>
    <string name="import_done_msg">Se han importado los datos del fichero: </string>
    <string name="help_import_db">Importar la base de datoss copiar\á los datos del fichero que est\á en la SD</string>
    <string name="help_import_db_title">Importar la base de datos</string>
    <string name="import_be">Importaci\ón con \éxito !!</string>
    <string name="importing_title">Importando la base de datos</string>
    <string name="importing">Importando...</string>
    <string name="error_permission_gps">Problemas con los permisos de uso del GPS</string>
    <string name="foto_e">Foto</string>
    <string name="list_event">Lista de notas</string>
    <string name="sin_precio">Primero tienes que escribir el precio...</string>
    <string name="action_vermapa">Mapa del viaje</string>
    <string name="map">mapa</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>

