<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="gg.pp.myappviajes.ui.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="10"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/m_catgor"
        android:orderInCategory="11"
        android:title="@string/menu_categor"
        app:showAsAction="never" />
    <item
        android:id="@+id/m_modopag"
        android:orderInCategory="12"
        android:title="@string/menu_modopag"
        app:showAsAction="never" />
    <item
        android:id="@+id/m_moneda"
        android:orderInCategory="13"
        android:title="@string/menu_moneda"
        app:showAsAction="never" />
    <item
        android:id="@+id/m_tipov"
        android:orderInCategory="14"
        android:title="@string/menu_tipov"
        app:showAsAction="never" />
    <item
        android:id="@+id/m_export"
        android:orderInCategory="15"
        android:title="@string/menu_export"
        app:showAsAction="never" />
    <item
        android:id="@+id/m_import"
        android:orderInCategory="15"
        android:title="@string/menu_import"
        app:showAsAction="never" />
    <item android:id="@+id/action_edit"
        android:title="@string/action_edit"
        android:orderInCategory="1"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_edit"/>
    <item android:id="@+id/action_delete"
        android:title="@string/action_delete"
        android:orderInCategory="2"
        app:showAsAction="ifRoom"
        android:icon="@mipmap/ic_delete"/>
</menu>
