<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        >
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nuevo_viaje" />
                <EditText
                    android:id="@+id/nom_viaje"
                    android:hint="@string/nom_viaje"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/data_in"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >
                <TextView
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/data_in" />

               <Button
                   android:id="@+id/change_data_in"
                   android:layout_width="0dip"
                   android:layout_weight="1"
                   android:layout_height="wrap_content" />

           </LinearLayout>
           <LinearLayout
               android:id="@+id/data_fi"
               android:orientation="horizontal"
               android:layout_width="fill_parent"
               android:layout_height="wrap_content"
               android:gravity="center" >
               <TextView
                   android:layout_width="0dip"
                   android:layout_weight="1"
                   android:layout_height="wrap_content"
                   android:text="@string/data_fi"	/>

               <Button
                   android:id="@+id/change_data_fi"
                   android:layout_width="0dip"
                   android:layout_weight="1"
                   android:layout_height="wrap_content" />

            </LinearLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >
                <TextView
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/tipo_v"
                    />


                <Spinner
                    android:id="@+id/spinner_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:prompt="@string/spin_tv"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:drawSelectorOnTop="true" />

            </LinearLayout>


            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >
                <TextView
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/kmini"	/>
                <EditText
                    android:id="@+id/kmini"
                    android:hint="@string/kmini"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/km_fi"
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >
                <TextView
                    android:layout_width="0dip"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/kmfi"	/>
                <EditText
                    android:id="@+id/kmfi"
                    android:hint="@string/kmfi"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >
                <TextView
                    android:layout_width="fill_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/descripcio_label"	/>
                <EditText
                    android:id="@+id/descripv"
                    android:hint="@string/descripcio_label"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>

        </LinearLayout>




    </ScrollView>
    <!--
    <Button
        android:id="@+id/btnAddViaje"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/guardar"
        android:onClick="onClickAddViaje"
        />
-->
</LinearLayout>
