<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivityFragment">
    <!-- tarjeta de arriba -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:background="@color/postit"
        android:orientation="vertical"
        android:layout_margin="@dimen/margin_right_form"
        >
        <LinearLayout
            android:id="@+id/content1"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/viaje_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/viaje_label"
                android:textAppearance="?android:attr/textAppearanceSmall" />
            <TextView
                android:id="@+id/nom_viaje"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/nom_viaje"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >
            <TextView
                android:id="@+id/llevas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/llevas"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="@color/primary" />
            <TextView
                android:id="@+id/totalkm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/primary" />

            <TextView
                android:id="@+id/km_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km_"
                android:textAppearance="?android:attr/textAppearanceSmall" />

            <TextView
                android:id="@+id/totalg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/primary" />
            <TextView
                android:id="@+id/eur_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eur_"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@color/primary" />
        </LinearLayout>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nuevo_viaje"
            android:id="@+id/button"
            android:layout_gravity="center"
            android:textColor="@color/primary"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <!-- Lista de categorias -->
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@android:id/list" />

        <!-- Texto emergente por si no hay elementos -->
        <TextView android:id="@+id/android:empty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No hay datos"/>




    </LinearLayout>
    </ScrollView>

    <!-- Floating Action antiguo Button -->


    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab"
        android:src="@mipmap/ic_add"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_gravity="right" />

</LinearLayout>
