<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.herprogramacion.mytechs.ui.InsertFragment">

    <!-- Etiqueta de la categoria -->
    <TextView
        android:id="@+id/descripcion_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/categor_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- Texto de la categoria -->
    <EditText
        android:id="@+id/categor_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/descripcion_label"
        android:hint="@string/description_input"
        android:maxLength="120" />

    <!-- Divisor-->
    <View
        android:id="@+id/divider1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/categor_input"
        android:layout_marginTop="@dimen/margin_divider"
        android:background="@color/divider_color" />

    <!-- Etiqueta del estado-->
    <TextView
        android:id="@+id/estado_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tecnico_spinner"
        android:paddingTop="@dimen/padding_top_form"
        android:text="@string/estado_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- Etiqueta del técnico asignado-->
    <TextView
        android:id="@+id/tecnico_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/divider1"
        android:paddingTop="@dimen/padding_top_form"
        android:text="@string/tecnico_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- Etiqueta de la categoría-->
    <TextView
        android:id="@+id/categoria_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/prioridad_spinner"
        android:paddingTop="@dimen/padding_top_form"
        android:text="@string/prioridad_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- Etiqueta de la prioridad-->
    <TextView
        android:id="@+id/prioridad_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/estado_label"
        android:layout_centerHorizontal="true"
        android:paddingTop="@dimen/padding_top_form"
        android:text="@string/prioridad_label"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <!-- Selección de prioridad
    <Spinner
        android:id="@+id/prioridad_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/prioridad_label"
        android:layout_alignStart="@+id/prioridad_label"
        android:layout_below="@+id/prioridad_label"
        android:entries="@array/prioridad" />
-->
    <!-- Selección del técnico
    <Spinner
        android:id="@+id/tecnico_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/tecnico_label"
        android:entries="@array/tecnico" />
-->
    <!-- Selección de la categoría
    <Spinner
        android:id="@+id/categoria_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/categoria_label"
        android:entries="@array/categoria" />
-->
    <!-- Selección del estado
    <Spinner
        android:id="@+id/estado_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/estado_label"
        android:layout_marginRight="@dimen/margin_right_form"
        android:layout_toLeftOf="@+id/prioridad_label"
        android:entries="@array/estado" />
-->
</RelativeLayout>
